Implement reset password, optimize error handling in frontend